# fastmsa

./: .gitignore  .travis.yml  MANIFEST.in  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
docs/: README.md
docs/diagrams/: abstract.puml
fastmsa/: __init__.py  api.py  command.py  config.py  core.py  domain.py  event.py  flask.py  logging.py  main.py  msgbus.py  orm.py  redis.py  repo.py  repository.py  schema.py  uow.py  utils.py
fastmsa/core/: __init__.py  _errors.py  _logging.py  _models.py  models.py  uow.py
fastmsa/templates/app/: README.md.j2  pytest.ini  requirements.txt  setup.cfg  setup.cfg.j2  test_msa_command.py
fastmsa/templates/app/app/: __main__.py  config.py  config.py.j2
fastmsa/templates/app/app/adapters/: orm.py
fastmsa/templates/app/app/adapters/orm/: default.py.j2
fastmsa/templates/app/app/domain/: aggregates.py  events.py  models.py
fastmsa/templates/app/app/handlers/: __init__.py  sample.py
fastmsa/templates/app/app/routes/: sample.py  sample.py.j2
fastmsa/templates/app/app/schema/: sample.py
fastmsa/templates/app/app/services/: sample.py
fastmsa/templates/app/tests/: conftest.py
fastmsa/templates/app/tests/unit/: test_domain.py.j2  test_services.py.j2
fastmsa/test/: __init__.py  api.py  e2e.py  unit.py
scripts/: publish.sh  run_postgres.sh  run_redis.sh
tests/: __init__.py  conftest.py  setup.cfg  utils.py
tests/app/: __main__.py  config.py  requirements.txt
tests/e2e/: __init__.py  test_api.py  test_command.py  test_external_events.py  test_msa_command.py
tests/integration/: __init__.py  (+3 more)
(+33 files in other folders)
