[metadata]
description-file = README.md

[fastmsa]
name=fastmsa
module_name=tests.app

[isort]
profile = black

[flake8]
max-line-length = 88
max-doc-length = 88
extend-ignore = E203, W503

[pydocstyle]
convention = google
add-ignore = D202, D403
match-dir = fastmsa

[tool:pytest]
addopts = --tb=short
testpaths =
    tests
norecursedirs = fastmsa/templates

[mypy]
ignore_missing_imports = False

[mypy-*.tests.*]
# ignore_errors = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-sqlalchemy.*]
ignore_missing_imports = True

[mypy-uvicorn.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-colorama.*]
ignore_missing_imports = True